section-eight/0-create-ssh-security-group.yaml
Resources:
  # Define the VPC
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Name
          Value: MyVPC

  # Define an Internet Gateway
  MyInternetGateway:
    Type: AWS::EC2::InternetGateway

  # Attach the Internet Gateway to the VPC
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  # Define a Public Subnet
  MyPublicSubnet:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: false
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""

  # Define a Route Table
  MyRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  # Define a Route
  MyRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  # Associate the Route Table with the Public Subnet
  MyRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref MyPublicSubnet
      RouteTableId: !Ref MyRouteTable

  # Define the Security Group within the VPC
  MyCompanyWideSSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
        # we have a lot of rules because it's a perfect security group
        # finance team network
        - CidrIp: 10.0.48.0/24
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
          Description: Finance team network
          # marketing team network
        - CidrIp: 10.0.112.0/24
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
          Description: Marketing team network
          # application team support network
        - CidrIp: 10.0.176.0/24
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
          Description: Application team support network

Outputs:
  VPCId:
    Description: The ID of the VPC
    Value: !Ref MyVPC
    Export:
      Name: MyVPCId

  PublicSubnetId:
    Description: The ID of the Public Subnet
    Value: !Ref MyPublicSubnet
    Export:
      Name: MyPublicSubnetId

  SecurityGroupId:
    Description: The ID of the SSH Security Group
    Value: !Ref MyCompanyWideSSHSecurityGroup
    Export:
      Name: MyCompanyWideSSHSecurityGroup
